prom/05-prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: monitoring

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: Host(`prometheus.henni.dev`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 8080
  tls:
    certResolver: le
    domains:
      - main: henni.dev
        sans:
          - "*.henni.dev"
