prom/06-prometheus-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "prometheus-ingress"
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: henni.dev
    traefik.ingress.kubernetes.io/router.tls.domains.0.sans: "*.henni.dev"

spec:
  rules:
    - host: prometheus.henni.dev
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: prometheus-service
                port:
                  number: 8080
